--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ dependencies = [
     "numpy>=1.24",
     "scipy>=1.11",
     "matplotlib>=3.7",
+    "pyvista>=0.46.5",
+    "plotly>=6.5.2",
+    "nbformat>=5.10.4",
 ]
 
 [project.optional-dependencies]
